signup constraints are in progress

--- a/Opi9/Base.lproj/Main.storyboard
+++ b/Opi9/Base.lproj/Main.storyboard
@@ -533,7 +533,7 @@
                                     <constraint firstAttribute="width" constant="57" id="Jvl-jh-VPa"/>
                                     <constraint firstAttribute="height" constant="30" id="nUD-pE-C8V"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -565,7 +565,7 @@
                                     <constraint firstAttribute="width" constant="40" id="CNA-yt-dFQ"/>
                                     <constraint firstAttribute="height" constant="20" id="ftc-ob-vfr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -600,13 +600,13 @@
                                             <constraint firstAttribute="height" constant="21" id="ifA-Da-IdF"/>
                                             <constraint firstAttribute="width" constant="239" id="sbV-CG-Ssx"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not interested" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QB8-D3-PI0">
-                                        <rect key="frame" x="44" y="57" width="109" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="44" y="57" width="108" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -655,7 +655,7 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="RMH-lf-57m"/>
                                     <constraint firstAttribute="height" constant="20" id="zJr-Dp-mqX"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
